--- a/main.ipynb
+++ b/main.ipynb
@@ -1,12 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Import Libraries\n",
     "import pandas as pd\n",
     "import requests\n",
     "from io import BytesIO\n",
@@ -14,8 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,9 +55,7 @@
     }
    ],
    "source": [
-    "## Retrieve Data\n",
     "# Define URLs for the datasets\n",
-    "\n",
     "restaurant_link = 'https://raw.githubusercontent.com/Papagoat/brain-assessment/main/restaurant_data.json'\n",
     "country_codes_link = 'https://github.com/Papagoat/brain-assessment/blob/main/Country-Code.xlsx?raw=true'\n",
     "\n",
