Finished all questions

--- a/main.ipynb
+++ b/main.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retrieve Data"
+    "## Download and Load Data"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 1: Data Extraction for Restaurants"
+    "## Question 1: Extract and Structure Restaurant Data"
    ]
   },
   {
@@ -644,6 +644,99 @@
     "\n",
     "# Save the cleaned DataFrame to a CSV file\n",
     "final_restaurants_df.to_csv('restaurants.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 2: Filter and Extract Restaurant Events for April 2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chank\\AppData\\Local\\Temp\\ipykernel_24140\\1111499934.py:20: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  ]].fillna(\"NA\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert event date columns to datetime format for filtering\n",
+    "restaurants_dataframe['Event_Start_Date'] = pd.to_datetime(restaurants_dataframe['Event_Start_Date'], errors='coerce')\n",
+    "restaurants_dataframe['Event_End_Date'] = pd.to_datetime(restaurants_dataframe['Event_End_Date'], errors='coerce')\n",
+    "\n",
+    "# Filter events that occurred in April 2019\n",
+    "april_events_2019 = restaurants_dataframe[\n",
+    "    ((restaurants_dataframe['Event_Start_Date'].dt.month == 4) & (restaurants_dataframe['Event_Start_Date'].dt.year == 2019)) |\n",
+    "    ((restaurants_dataframe['Event_End_Date'].dt.month == 4) & (restaurants_dataframe['Event_End_Date'].dt.year == 2019))\n",
+    "]\n",
+    "\n",
+    "# Select necessary columns and handle missing data\n",
+    "filtered_april_events = april_events_2019[[\n",
+    "    'Event_ID', \n",
+    "    'Restaurant_ID', \n",
+    "    'Restaurant_Name', \n",
+    "    'Event_Photo_URL', \n",
+    "    'Event_Title', \n",
+    "    'Event_Start_Date', \n",
+    "    'Event_End_Date'\n",
+    "]].fillna(\"NA\")\n",
+    "\n",
+    "# Save the filtered events to a CSV file\n",
+    "filtered_april_events.to_csv('restaurant_events.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 3: Determine Rating Thresholds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Very Good: Min = 4.0, Max = 4.4\n",
+      "Excellent: Min = 4.5, Max = 4.9\n",
+      "Good: Min = 3.5, Max = 3.9\n",
+      "Average: Min = 2.5, Max = 3.4\n",
+      "Poor: Min = 2.2, Max = 2.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define valid ratings for calculation\n",
+    "valid_ratings = {\"Excellent\", \"Very Good\", \"Good\", \"Average\", \"Poor\"}\n",
+    "\n",
+    "# Initialize a dictionary to store thresholds for each rating\n",
+    "rating_limits = defaultdict(lambda: {\"min\": float(\"inf\"), \"max\": float(\"-inf\")})\n",
+    "\n",
+    "# Calculate the minimum and maximum ratings for each category\n",
+    "for index, row in restaurants_dataframe.iterrows():\n",
+    "    rating_category = row[\"Rating_Text\"]\n",
+    "    if rating_category in valid_ratings:\n",
+    "        user_rating = row[\"Average_Rating\"]\n",
+    "\n",
+    "        # Update the thresholds\n",
+    "        rating_limits[rating_category][\"min\"] = min(rating_limits[rating_category][\"min\"], user_rating)\n",
+    "        rating_limits[rating_category][\"max\"] = max(rating_limits[rating_category][\"max\"], user_rating)\n",
+    "\n",
+    "# Display the calculated thresholds for each rating category\n",
+    "for rating_category, limits in rating_limits.items():\n",
+    "    print(f\"{rating_category}: Min = {limits['min']}, Max = {limits['max']}\")"
    ]
   }
  ],
